clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/virtualservices.networking.istio.io/bookinfo-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "bookinfo.zufardhiyaulhaq.com"
  gateways:
  - istio-system/bookinfo-zufardhiyaulhaq-com-gateway
  http:
  - name: "bookinfo-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 9080
          host: productpage.default.svc.cluster.local
  - name: "ratelimit-route"
    match:
    - uri:
        prefix: /ratelimit
    route:
      - destination:
          port:
            number: 9080
          host: productpage.default.svc.cluster.local
  exportTo:
    - "."
