clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/virtualservices.networking.istio.io/grafana-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "grafana.zufardhiyaulhaq.com"
  gateways:
  - istio-system/grafana-zufardhiyaulhaq-com-gateway
  http:
  - name: "default-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 80
          host: victoria-metrics-grafana.observability-system.svc.cluster.local
  exportTo:
    - "."
