clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/virtualservices.networking.istio.io/podinfo-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "podinfo.zufardhiyaulhaq.com"
  gateways:
  - istio-system/podinfo-zufardhiyaulhaq-com-gateway
  http:
  - name: "podinfo-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.default.svc.cluster.local
  exportTo:
    - "."
