clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/virtualservices.networking.istio.io/sakura-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sakura-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "sakura.zufardhiyaulhaq.com"
  gateways:
  - istio-system/sakura-zufardhiyaulhaq-com-gateway
  http:
  - name: "v1-generate"
    match:
    - uri:
        prefix: /v1/generate
    route:
      - destination:
          port:
            number: 3000
          host: sakura.community.svc.cluster.local
  - name: "api-docs"
    match:
    - uri:
        prefix: /api-docs
    route:
      - destination:
          port:
            number: 3000
          host: sakura.community.svc.cluster.local
  exportTo:
    - "."
